2019-1/231/users/4203/executions/1581_1016.log
== TEST (2019-03-26 11:14:21) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2


-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:14:25) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2


-- EXECUTION TIME:
0.221812
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:

-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:

-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:00) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

치rea=sqrt(s * (s-a) * (s-b) * (s-c))

prit(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    prit(area)
NameError: name 'prit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:04) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

치rea=sqrt(s * (s-a) * (s-b) * (s-c))

prit(area)
-- EXECUTION TIME:
0.148288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 11, in <module>
    prit(area)
NameError: name 'prit' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:11) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

치rea=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(area)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:15) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

치rea=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.124235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 11, in <module>
    print(area)
NameError: name 'area' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:26) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:30) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a+b+c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.181384
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:05) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:17:09) 
-- CODE:
from math import *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.143304
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:28) 
-- CODE:
from math import  *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:17:31) 
-- CODE:
from math import  *

a=float(input("Lado 1:"))
b=float(input("Lado 2:"))
c=float(input("Lado 3:"))

s=(a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.137613
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:18:23) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:26) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.101486
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:18:47) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:18:51) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.182284
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:05) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:22) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:25) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.11749
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:30) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:49) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:55) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.148834
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:58) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:20:16) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.184103
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:20:31) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area = sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:20:46) 
-- CODE:
from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area = sqrt(s * (s-a) * (s-b) * (s-c))

print(area)
-- EXECUTION TIME:
0.161397
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:38) 
-- CODE:
from math import 


-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:50) 
-- CODE:
from math import * 


-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:59) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:22:12) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1:"))
b = float(input("Lado 2:"))
c = float(input("Lado 3:"))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- EXECUTION TIME:
0.213657
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:22:37) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- EXECUTION TIME:
0.183366
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
Lado 1: Lado 2: Lado 3: 69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
Lado 1: Lado 2: Lado 3: 600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
Lado 1: Lado 2: Lado 3: 709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:05) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:23:29) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- EXECUTION TIME:
0.2403
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:31) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:24:00) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)


-- EXECUTION TIME:
0.1647
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:12) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:24:21) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- EXECUTION TIME:
0.134726
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:15) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:48) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:26:18) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:26:27) 
-- CODE:
from math import * 

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- EXECUTION TIME:
0.216
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:17) 
-- CODE:


from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:30) 
-- CODE:


from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:27:37) 
-- CODE:


from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- EXECUTION TIME:
0.184373
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:43) 
-- CODE:

from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:33) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(area)




-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:07:20) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- EXECUTION TIME:
0.126755
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:40) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- OUTPUT:
69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:08:41) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- EXECUTION TIME:
0.193574
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:11:09) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- OUTPUT:
69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:11:38) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- EXECUTION TIME:
0.14515
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:11:43) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- OUTPUT:
69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:12:17) 
-- CODE:
from math import *

a = float(input("Lado 1: "))
b = float(input("Lado 2: "))
c = float(input("Lado 3: "))

s = (a + b + c)/2

area=sqrt(s * (s-a) * (s-b) * (s-c))

print(round(area))




-- EXECUTION TIME:
0.156119
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:32) 
-- CODE:


a = float(input())
b = float(input())
c = float(input())
from math import sqrt

s = (a + b + c)/2
x=float(s*(s-a)*(s-b)*(s-c))
area=float(sqrt(X))
print(round(area,5))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area=float(sqrt(X))
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:39) 
-- CODE:


a = float(input())
b = float(input())
c = float(input())
from math import sqrt

s = (a + b + c)/2
x=float(s*(s-a)*(s-b)*(s-c))
area=float(sqrt(X))
print(round(area,5))




-- EXECUTION TIME:
0.160073
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 10, in <module>
    area=float(sqrt(X))
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:22:40) 
-- CODE:


a = float(input())
b = float(input())
c = float(input())
from math import sqrt

s = (a+b+c)/2
x=float(s*(s-a)*(s-b)*(s-c))
area=float(sqrt(X))
print(round(area,5))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area=float(sqrt(X))
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:22:49) 
-- CODE:


a = float(input())
b = float(input())
c = float(input())
from math import sqrt

s = (a+b+c)/2
x=float(s*(s-a)*(s-b)*(s-c))
area=float(sqrt(X))
print(round(area,5))




-- EXECUTION TIME:
0.131202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 10, in <module>
    area=float(sqrt(X))
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:52) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:25:19) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- EXECUTION TIME:
0.148292
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:46:23) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:46:27) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- EXECUTION TIME:
0.203034
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:48:15) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:48:35) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:49:04) 
-- CODE:
a = float(input('varA:' ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
varA:69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:49:28) 
-- CODE:
a = float(input('varA:' ))
b = float(input('varB:' ))
c = float(input('varC:' ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
varA:varB:varC:69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:49:39) 
-- CODE:
a = float(input('varA:' ))
b = float(input('varB:' ))
c = float(input('varC:' ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- EXECUTION TIME:
0.200209
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
varA:varB:varC:69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
varA:varB:varC:600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
varA:varB:varC:709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:52:09) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:52:13) 
-- CODE:
a = float(input( ))
b = float(input( ))
c = float(input( ))
from math import sqrt
s = (a+b+c)/2
x = float(s*(s-a)*(s-b)*(s-c))
area= float(sqrt(x))
print(round(area,5))




-- EXECUTION TIME:
0.118452
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
